# frameless-runtime-template

./: .gitignore  Cargo.toml  HK_RETRO.md  README.md  RUBRIC.md  grade_final.py  grade_pre.py  grade_pre.sh  spec.mmd
.config/: nextest.toml
.github/workflows/: docs.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  shared.rs
runtime/src/solution/: currency.rs  mod.rs
runtime/tests/: grading.rs  shared.rs
src/: lib.rs
