[package]
name = "runtime"
version = "0.3.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.6.0", default-features = false }
log = { version = "0.4.14" }
hex-literal = { version = "0.4.1" }
docify = "0.2.7"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.111", default-features = false, features = [
	"alloc",
] }

sp-storage = { version = "21.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }
sp-api = { version = "31.0.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false, features = [
	"serde",
] }
sp-version = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-offchain = { version = "31.0.0", default-features = false }
sp-genesis-builder = { version = "0.12.0", default-features = false }


[build-dependencies]
substrate-wasm-builder = { version = "22.0.0", optional = true }

[dev-dependencies]
sp-keyring = { version = "36.0.0", default-features = false }
sp-tracing = { version = "17.0.0", default-features = false }
sc-executor = { version = "0.37.0", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",

	"sp-storage/std",
	"sp-io/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-block-builder/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-offchain/std",
	"sp-genesis-builder/std",

	"substrate-wasm-builder",
]
